Set build time zone to Australia/Melbourne.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 #theme: jekyll-theme-midnight
 theme: minima
 markdown: kramdown
+timezone: Australia/Melbourne
 
 title: ozzmosis.com
 description: andrew clarke
